envoy.yaml
static_resources:
  listeners:
    - name: kioku_envoy_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api/login"
                          route:
                            cluster: grpc_loginservice
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                            timeout: 0s
                        - match:
                            prefix: "/api/register"
                          route:
                            cluster: grpc_registerservice
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/proto/combined.pb"
                      services: ["loginservice.Loginservice", "registerservice.Registerservice"]
                      match_incoming_request_route: true
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: grpc_loginservice
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_loginservice
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: login_service
                      port_value: 8080
    - name: grpc_registerservice
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc_registerservice
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: register_service
                      port_value: 8080
